--- a/shop_list.html
+++ b/shop_list.html
@@ -16,7 +16,7 @@
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             font-family: 'Glacial Indifference', sans-serif;
-            background-color: #e4d426;
+            background-color: #faf3e0;
             color: #333;
             line-height: 1.6;
         }
