--- a/saved.html
+++ b/saved.html
@@ -102,7 +102,8 @@
                                 <h3>${meal.name}</h3>
                                 <button onclick="toggleMoreInfo(${meal.id})">More Info</button>
                                 <button onclick="toggleIngredients(${meal.id})">Ingredients</button>
-                                <a href="${meal.url}" target="_blank" class="button-link">Recipe</a>
+                                <button <a href="${meal.url}" target="_blank" class="button-link">Recipe</a>
+                                </button>
                                 <div id="more-info-${meal.id}" class="more-info">
                                     <ul>
                                         <li><strong>Calories:</strong> ${meal.calories || "N/A"}</li>
