--- a/saved.html
+++ b/saved.html
@@ -15,12 +15,10 @@
         }
 
         .container {
-            max-width: 800px;
-            margin: 20px auto;
+            width: 80%;
+            max-width: 1200px;
+            margin: 0 auto;
             padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         h1 {
@@ -30,12 +28,22 @@
         }
 
         .meal {
-            background: #f9f9f9;
-            padding: 20px;
+             width: 60%; 
+            margin: 0 auto 20px auto;
+            padding: 15px;
             margin-bottom: 20px;
+            padding: 15px;
+            border: 1px solid #ccc;
             border-radius: 5px;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-            text-align: left;
+            background: #f9f9f9;
+            background-color: #f9f9f9;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .meal:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
         }
 
         .meal h3 {
@@ -43,21 +51,20 @@
             color: #007bff;
             font-size: 1.5em;
         }
-
-        .meal button {
+  .meal button {
             display: inline-block;
-            margin-top: 10px;
-            padding: 8px 12px;
-            font-size: 1rem;
+            background-color: #6a9a3c;
             color: #fff;
-            background-color: #007bff;
             border: none;
             border-radius: 5px;
+            padding: 10px 15px;
+            font-size: 1rem;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
 
         .meal button:hover {
-            background-color: #0056b3;
+            background-color: #e4d426;
         }
 
         .ingredients, .more-info {
