--- a/shop_list.html
+++ b/shop_list.html
@@ -95,7 +95,7 @@
             text-align: center;
             padding: 30px 0;
         }
-         /* Footer */
+       /* Footer */
         footer {
             background-color: #333;
             color: white;
@@ -113,59 +113,63 @@
         }
 
         /* Navbar */
-.top-nav {
-    background-color: #ffffff; /* White background */
-    border-bottom: 1px solid #e4d426; /* Yellow border for style */
-    padding: 15px 0; /* Padding for better spacing */
-    position: sticky; /* Sticks to the top when scrolling */
-    top: 0; /* Ensure it stays at the top */
-    z-index: 1000; /* Layering to keep it on top */
-}
+        .top-nav {
+            background-color: #ffffff;
+            border-bottom: 1px solid #e4d426;
+            padding: 15px 0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
 
-.nav-container {
-    display: flex; /* Flexbox for alignment */
-    align-items: center; /* Center items vertically */
-    justify-content: space-between; /* Space between logo and links */
-    max-width: 1200px; /* Constrain the width */
-    margin: 0 auto; /* Center the nav-container */
-    padding: 0 20px; /* Add horizontal padding */
-}
+        .nav-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
 
-.logo {
-    height: 80px; /* Set the size of the logo */
-    margin-right: 20px; /* Space between the logo and navigation links */
-    margin-left: 0; /* Align the logo to the left */
-}
+        .logo {
+            height: 80px;  /* Reduced size of the logo */
+            margin-right: 20px;  /* Space between logo and navigation links */
+            margin-left: 0;  /* Align logo to the left */
+        }
 
-nav a {
-    color: #6a9a3c; /* Earthy green text color */
-    text-decoration: none; /* Remove underline */
-    font-size: 1rem; /* Adjust font size */
-    font-weight: bold; /* Make text bold */
-    margin: 0 15px; /* Spacing between links */
-    padding: 8px 12px; /* Padding around links */
-    border-radius: 4px; /* Rounded edges for hover effect */
-    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth hover effect */
-}
+        nav a {
+            color: #6a9a3c;  /* Earthy green */
+            text-decoration: none;
+            font-size: 1rem;
+            font-weight: bold;
+            margin: 0 15px;
+            padding: 8px 12px;
+            border-radius: 4px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
 
-nav a:hover {
-    background-color: #e4d426; /* Yellow background on hover */
-    color: white; /* White text on hover */
-}
+        nav a:hover {
+            background-color: #e4d426;
+            color: white;
+        }
 
     </style>
 </head>
    <body>
-<div class="top-nav">
-    <div class="nav-container">
-        <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
-        <nav>
-            <a href="gen-meals.html">PLANNING</a>
-            <a href="meal_plans.html">SAVED MEAL PLANS</a>
-            <a href="about.html">ABOUT</a>
-        </nav>
+    <div class="top-nav">
+        <div class="nav-container">
+            <a href="index.html">
+                <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+            </a>
+            <nav>
+                <a href="gen-meals.html">RECIPES</a>
+                <a href="saved.html">FAVORITES</a>
+                <a href="shop_list.html">CART</a>
+                <a href="about.html">ABOUT</a>
+            </nav>
+
+        </div>
     </div>
-</div>
        <header>
         <h1>Your Shopping List</h1>
        </header>
@@ -173,7 +177,14 @@ nav a:hover {
        <!-- Footer Section -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Design&Dine. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Contact Us</a></p>
+            <!-- Login and Register links above the Contact Us line -->
+            <div style="margin-bottom: 10px; text-align: center;">
+                <a href="login.html" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; margin-right: 15px; text-decoration: none;">Login</a>
+                <a href="register.html" style="color:  rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; text-decoration: none;">Register</a>
+            </div>
+            <p>&copy; 2024 Design&Dine. All rights reserved. 
+                | <a href="mailto:support@designdine.com">Contact Us</a> 
+            </p>
         </div>
     </footer>
     <script>
