--- a/saved.html
+++ b/saved.html
@@ -15,12 +15,10 @@
         }
 
         .container {
-            max-width: 800px;
-            margin: 20px auto;
+            width: 80%;
+            max-width: 1200px;
+            margin: 0 auto;
             padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         h1 {
