--- a/saved.html
+++ b/saved.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saved Meals</title>
     <style>
-        body {
+         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
+            font-family: 'Glacial Indifference', sans-serif;
+            background-color: #faf3e0;
             color: #333;
             line-height: 1.6;
-            margin: 0;
-            padding: 0;
         }
 
         .container {
@@ -21,19 +21,32 @@
             padding: 20px;
         }
 
-        h1 {
+          h1 {
+            font-size: 2.5rem;
             text-align: center;
             color: #444;
-            margin-bottom: 20px;
+            color: #333;
+            margin-bottom: 30px;
         }
 
-        .meal {
-            background: #f9f9f9;
-            padding: 20px;
+         .meal {
+            width: 60%; 
+            margin: 0 auto 20px auto;
+            padding: 15px;
             margin-bottom: 20px;
+            padding: 15px;
+            border: 1px solid #ccc;
             border-radius: 5px;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-            text-align: left;
+            background: #f9f9f9;
+            background-color: #f9f9f9;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .meal:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
         }
 
         .meal h3 {
@@ -41,7 +54,12 @@
             color: #007bff;
             font-size: 1.5em;
         }
-
+        .meal h3 {
+            margin: 0;
+            font-size: 1.5rem;
+            color: #444;
+            margin-bottom: 10px;
+        }
         .meal .toggle-btn, .meal .recipe-link {
             display: inline-block;
             margin-top: 10px;
@@ -69,10 +87,10 @@
             display: none;
         }
 
-        .ingredients ul, .more-info ul {
+          .ingredients ul {
             list-style-type: disc;
-            margin: 10px 0;
             padding-left: 20px;
+            color: #666;
         }
 
         .ingredients ul li, .more-info ul li {
