--- a/saved.html
+++ b/saved.html
@@ -67,7 +67,7 @@
             padding: 8px 12px;
             font-size: 1rem;
             color: #fff;
-            background-color: #007bff;
+            background-color: #6a9a3c;
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -75,7 +75,7 @@
         }
 
         .meal .toggle-btn:hover, .meal .recipe-link:hover {
-            background-color: #0056b3;
+            background-color: rgb(0, 117, 23)
         }
 
         .meal .toggle-btn.active {
