--- a/shop_list.html
+++ b/shop_list.html
@@ -13,10 +13,8 @@
             box-sizing: border-box;
         }
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            font-family: 'Glacial Indifference', sans-serif;
-            background-color: #faf3e0;
+            font-family: 'Poppins', sans-serif;
+            background-color: #fff;
             color: #333;
             line-height: 1.6;
         }
