--- a/index1.html
+++ b/index1.html
@@ -13,9 +13,9 @@
             box-sizing: border-box;
         }
 
-        body {
+       body {
             font-family: 'Poppins', sans-serif;
-            background-color: #fff;  /* White background */
+            background-color: #fff;
             color: #333;
             line-height: 1.6;
         }
