--- a/saved.html
+++ b/saved.html
@@ -6,10 +6,8 @@
     <title>Saved Meals</title>
     <style>
          body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            font-family: 'Glacial Indifference', sans-serif;
-            background-color: #faf3e0;
+            font-family: 'Poppins', sans-serif;
+            background-color: #fff;
             color: #333;
             line-height: 1.6;
         }
