--- a/register.html
+++ b/register.html
@@ -13,8 +13,8 @@
         }
 
         body {
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #e4d426, #f5f5f5);
+            font-family: 'Poppins', sans-serif;
+            background-color: #fff;
             color: #333;
             line-height: 1.6;
         }
