--- a/login.html
+++ b/login.html
@@ -13,11 +13,11 @@
     }
 
     body {
-        font-family: 'Poppins', sans-serif;
-        background-color: #faf3e0;
-        color: #333;
-        line-height: 1.6;
-    }
+            font-family: 'Poppins', sans-serif;
+            background-color: #fff;
+            color: #333;
+            line-height: 1.6;
+        }
 
     .container {
         width: 80%;
