--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
     body {
             font-family: 'Poppins', sans-serif;
-            background-color: #fff;
+            background-color: #faf3e0;
             color: #333;
             line-height: 1.6;
         }
