--- a/about1.html
+++ b/about1.html
@@ -298,15 +298,15 @@
         </div>
     </div>
 
-<footer>
-    <div class="container">
-        <!-- Login and Register links above the Contact Us line -->
-        <div style="margin-bottom: 10px; text-align: center;">
-            <a href="login.html" style="color: yellow; font-size: 1.2rem; font-weight: bold; margin-right: 15px; text-decoration: none;">Login</a>
-            <a href="register.html" style="color: yellow; font-size: 1.2rem; font-weight: bold; text-decoration: none;">Register</a>
+ <footer>
+        <div class="container">
+            <!-- Login and Register links above the Contact Us line -->
+            <div style="margin-bottom: 10px; text-align: center;">
+                <a href="login.html" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; margin-right: 15px; text-decoration: none;">Login</a>
+                <a href="register.html" style="color:  rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; text-decoration: none;">Register</a>
+            </div>
+            <p>&copy; 2024 Design&Dine. All rights reserved. 
+                | <a href="mailto:support@designdine.com">Contact Us</a> 
+            </p>
         </div>
-        <p>&copy; 2024 Design&Dine. All rights reserved. 
-            | <a href="mailto:support@designdine.com">Contact Us</a> 
-        </p>
-    </div>
-</footer>
+    </footer>
