--- a/login.html
+++ b/login.html
@@ -221,17 +221,16 @@
         </div>
     </div>
 
-    <footer>
+ <footer>
         <div class="container">
+            <!-- Login and Register links above the Contact Us line -->
             <div style="margin-bottom: 10px; text-align: center;">
                 <a href="login.html" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; margin-right: 15px; text-decoration: none;">Login</a>
-                <a href="register.html" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; text-decoration: none;">Register</a>
+                <a href="register.html" style="color:  rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; text-decoration: none;">Register</a>
             </div>
-            
-&copy; 2024 Design&Dine. All rights reserved. 
-                | <a href="mailto:support@designdine.com">Contact Us</a>
-            
-
+            <p>&copy; 2024 Design&Dine. All rights reserved. 
+                | <a href="mailto:support@designdine.com">Contact Us</a> 
+            </p>
         </div>
     </footer>
 
