--- a/saved.html
+++ b/saved.html
@@ -7,7 +7,7 @@
     <style>
          body {
             font-family: 'Poppins', sans-serif;
-            background-color: #fff;
+            background-color: #faf3e0; /* Light Beige */
             color: #333;
             line-height: 1.6;
         }
