--- a/saved.html
+++ b/saved.html
@@ -17,6 +17,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
+            background-color: #faf3e0; /* Light Beige */
         }
 
           h1 {
