--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&family=Poppins:wght@600&display=swap" rel="stylesheet">
     <title>Design&Dine</title>
     <style>
+
         /* General Reset */
         * {
             margin: 0;
@@ -20,18 +21,16 @@
             line-height: 1.6;
         }
 
-        .container {
-            width: 80%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
+        .text-container {
+            text-align: center;
+            margin-top: 0px; /* Reduce this value to move the text up */
         }
 
         /* Header */
         header {
             background-color: #fff;
             text-align: center;
-            padding: 30px 0;
+            padding: 10px 10;
         }
 
         header h1 {
