--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
         /* Header */
         header {
             background-color: #ffffff;
-            color: #28a745;
+            color: #7a9d3f;
             text-align: center;
             padding: 60px 0;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -75,7 +75,7 @@
         .register-box h2 {
             margin-bottom: 20px;
             font-size: 2rem;
-            color: #28a745;
+            color: #7a9d3f;
             text-align: center;
         }
 
@@ -97,7 +97,7 @@
 
         button {
             width: 100%;
-            background-color: #28a745;
+            background-color: #7a9d3f;
             color: white;
             font-size: 1.2rem;
             padding: 12px;
