--- a/register.html
+++ b/register.html
@@ -179,7 +179,7 @@
         }
 
         #form-message.success {
-            color: green;
+            color: 6a9a3c;
         }
 
         #form-message.error {
@@ -222,7 +222,7 @@
         }
 
         .subscribe-box {
-            background-color: #28a745; /* Green background */
+            background-color: #6a9a3c; /* Green background */
             padding: 20px;
             border-radius: 8px;
             margin-bottom: 30px;
@@ -265,7 +265,7 @@
 
         .payment-box h3 {
             font-size: 2rem;
-            color: #28a745;
+            color: #6a9a3c;
             text-align: center;
             margin-bottom: 20px;
         }
@@ -281,7 +281,7 @@
 
         .payment-box button {
             width: 100%;
-            background-color: #28a745;
+            background-color: #6a9a3c;
             color: white;
             font-size: 1.2rem;
             padding: 12px;
