--- a/register.html
+++ b/register.html
@@ -222,7 +222,7 @@
         }
 
         .subscribe-box {
-            background-color: #6a9a3c; /* Green background */
+            background-color: #3e5b22; /* Green background */
             padding: 20px;
             border-radius: 8px;
             margin-bottom: 30px;
@@ -281,7 +281,7 @@
 
         .payment-box button {
             width: 100%;
-            background-color: #6a9a3c;
+            background-color: #629235;
             color: white;
             font-size: 1.2rem;
             padding: 12px;
