--- a/gen-meals.html
+++ b/gen-meals.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #faf3e0;
             color: #333;
             line-height: 1.6;
         }
@@ -205,17 +205,15 @@
 
         <div id="results" class="results"></div>
     </div>
-      <footer>
-        <div class="container">
-            <!-- Logout link above the Contact Us line -->
-            <div style="margin-bottom: 10px; text-align: center;">
-                <a href="logout.php" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; margin-right: 15px; text-decoration: none;">Logout</a>
-            </div>
-            <p>&copy; 2024 Design&Dine. All rights reserved. 
-                | <a href="mailto:support@designdine.com">Contact Us</a> 
-            </p>
+    <!-- Footer Section -->
+    <footer>
+        <div>
+            <a href="login.html" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; margin-right: 15px; text-decoration: none;">Login</a>
+            <a href="register.html" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; text-decoration: none;">Register</a>
         </div>
+        <p>&copy; 2024 Design&Dine. All rights reserved. | <a href="mailto:support@designdine.com">Contact Us</a></p>
     </footer>
+
     <script>
         document.getElementById("recipe-form").addEventListener("submit", function (e) {
             e.preventDefault();
