--- a/shop_list.html
+++ b/shop_list.html
@@ -18,6 +18,7 @@
             color: #333;
             line-height: 1.6;
             margin: 0 auto; /* Add this line */
+           
             
         }
         html, body {
@@ -32,7 +33,7 @@
         }
 
         footer {
-            position: fixed;
+            /* position: fixed; */
             bottom: 0;
             width: 100%;
             background-color: #333;
@@ -119,13 +120,15 @@
             text-align: center;
             padding: 30px 0;
         }
-       /* Footer */
+       /* Footer
        footer {
             background-color: #333;
             color: white;
             text-align: center;
             padding: 20px 0;
         }
+
+     */
 
         footer a {
             color: #f1f1f1;
