--- a/saved.html
+++ b/saved.html
@@ -21,7 +21,6 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-
             flex: 1;
         }
 
@@ -79,12 +78,13 @@
         .ingredients, .more-info {
             margin-top: 10px;
             display: none;
+            font-size: 1rem; /* Unified font size */
+            color: #666; /* Unified text color */
         }
 
-        .ingredients ul {
+        .ingredients ul, .more-info ul {
             list-style-type: disc;
             padding-left: 20px;
-            color: #666;
         }
 
         .ingredients ul li, .more-info ul li {
